# pimajudge

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yml  precommit.yml  release.yml
src/pimajudge/week1/: __init__.py  collector.py  jury.py
tests/winter25/: test_import.py
winter25/: pyproject.toml
winter25/src/winter25/: __init__.py
