[project]
name = "aib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naot", email = "toanvv.ti.1922@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
