[project]
name = "pimajudge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naot", email = "toanvv.ti.1922@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pimajudge = { workspace = true }

[tool.ruff]
line-length = 88
extend-select = ["I", "TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["pimajudge"]
force-single-line = false
combine-as-imports = true
