[project]
name = "winter25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naot", email = "toanvv.ti.1922@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
